--- a/src/pages/actionable-marketing-institute.astro
+++ b/src/pages/actionable-marketing-institute.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import myChart from "../assets/images/work/my-chart/project-screenshot.png?url";
+import hero from "../assets/images/work/ami/ami-hero.png?url";
 import courseDetails from "../assets/images/work/ami/project-screenshots-ami-course-details.png?url";
 import lessons from "../assets/images/work/ami/project-screenshots-ami-lessons-1.png?url";
 import planComparison from "../assets/images/work/ami/project-screenshots-ami-plan-comparison.png?url";
@@ -20,8 +20,8 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 		>
 			<div class="mx-auto w-full max-w-7xl">
 				<img
-					src={myChart}
-					alt="Headline Studio Screenshot"
+					src={hero}
+					alt="Actionable Marketing Institute Course Screenshot"
 					class="mx-auto w-full pb-12 md:pb-8"
 				/>
 				<div
