--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,11 +12,26 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html
 	lang="en"
-	class="bg-slate-500 font-sans-serif leading-normal text-slate-950"
+	class="bg-slate-300 font-sans-serif leading-normal text-slate-950"
 >
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="robots" content="index,follow" />
+		<meta name="googlebot" content="index,follow" />
+		<meta name="description" content="Product designer & developer" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="og:title" content="Samantha Albrecht" />
+		<meta property="og:description" content="Product designer & developer" />
+		<meta property="og:url" content="https://samanthaalbrecht.com" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:image"
+			content="https://samanthaalbrecht.com/default.png"
+		/>
+		<meta property="og:image:alt" content="Samantha Albrecht" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:site_name" content="Samantha Albrecht" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
