update project descriptions

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,13 +28,12 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 					</h2>
 					<div class="grid gap-y-4">
 						<p class="justify-self-start leading-loose">
-							A powerful tool that can help content creators improve the
-							effectiveness of their headlines and increase engagement with
-							their content.
+							A tool designed to help content creators improve the effectiveness
+							of their headlines and increase engagement with their content.
 						</p>
 						<p class="justify-self-start leading-loose">
-							Designed and built an AI-powered feature for generating headline
-							ideas...
+							Explore the design and development process behind Headline AI, a
+							powerful AI feature in Headline Studio.
 						</p>
 					</div>
 				</div>
@@ -64,8 +63,9 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 							information from anywhere at any time.
 						</p>
 						<p class="justify-self-start leading-loose">
-							A case study of the sign in experience, highlighting improvements
-							to the user interface, accessibility, and user experience.
+							Dive into this case study of the sign in experience, highlighting
+							improvements to the user interface, accessibility, and user
+							experience.
 						</p>
 					</div>
 				</div>
@@ -96,8 +96,9 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 							strategy.
 						</p>
 						<p class="justify-self-start leading-loose">
-							Rebuilt the website using a modern technology stack to improve
-							page performance and search engine optimization (SEO).
+							See how the team rebuilt coschedule.com using a modern technology
+							stack to improve page performance and search engine optimization
+							(SEO).
 						</p>
 					</div>
 				</div>
@@ -127,9 +128,8 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 							in digital marketing.
 						</p>
 						<p class="justify-self-start leading-loose">
-							To improve the overall user experience I designed & built custom
-							landing pages for each course that are engaging, user friendly,
-							and customizable.
+							Take a closer look at the strategy, tactics, and tools used to
+							create high-performing landing pages for AMI.
 						</p>
 					</div>
 				</div>
