--- a/src/pages/coschedule.astro
+++ b/src/pages/coschedule.astro
@@ -115,7 +115,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								<p class="lg:text-lg lg:leading-loose">
 									In an effort to boost website performance and address
 									declining traffic, we embarked on a significant project to
-									convert its website from PHP to React.
+									convert the website from PHP to React.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									About Google's Core Web Vitals
