--- a/src/pages/headline-studio-app.astro
+++ b/src/pages/headline-studio-app.astro
@@ -36,8 +36,8 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<p
 							class="text-sm leading-loose md:text-base md:leading-loose lg:text-lg lg:leading-loose"
 						>
-							A case study on the process of designing and building a new
-							feature in the Headline Studio&nbsp;application.
+							A project summary on the process of designing and building an
+							AI-powered feature in the Headline Studio&nbsp;app.
 						</p>
 					</div>
 					<aside
